fix overflow

--- a/style.css
+++ b/style.css
@@ -125,3 +125,8 @@ video {
     width: 100%;
     height: auto;
 }
+
+.responsive-video {
+    max-width: 100%;
+    height: auto;
+}
